@@ -118,15 +118,15 @@ static void clean_saves(const std::string &label)
 
 static LEVEL_RESULT playsingle_scenario(const config& game_config,
 		const config* level, display& disp, game_state& state_of_game,
-		const std::vector<config*>& story, upload_log& log, bool skip_replay)
+		const std::vector<config*>& story, upload_log& log, bool skip_replay, end_level_exception *end_level)
 {
 	const int ticks = SDL_GetTicks();
 	const int num_turns = atoi((*level)["turns"].c_str());
 	LOG_NG << "creating objects... " << (SDL_GetTicks() - ticks) << "\n";
 	playsingle_controller playcontroller(*level, state_of_game, ticks, num_turns, game_config, disp.video(), skip_replay);
 	LOG_NG << "created objects... " << (SDL_GetTicks() - playcontroller.get_ticks()) << "\n";
-
-	const LEVEL_RESULT res = playcontroller.play_scenario(story, log, skip_replay);
+	
+	const LEVEL_RESULT res = playcontroller.play_scenario(story, log, skip_replay, end_level);
 
 	if (res == DEFEAT) {
 		gui::message_dialog(disp,
@@ -135,7 +135,7 @@ static LEVEL_RESULT playsingle_scenario(const config& game_config,
 				    ).show();
 	}
 
-	if (!disp.video().faked() && res != QUIT && res != LEVEL_CONTINUE && res != LEVEL_CONTINUE_NO_SAVE)
+	if (!disp.video().faked() && res != QUIT && end_level->linger_mode)
 		try {
 			playcontroller.linger(log);
 		} catch(end_level_exception& e) {
@@ -151,14 +151,14 @@ static LEVEL_RESULT playsingle_scenario(const config& game_config,
 static LEVEL_RESULT playmp_scenario(const config& game_config,
 		config const* level, display& disp, game_state& state_of_game,
 		const config::child_list& story, upload_log& log, bool skip_replay,
-		io_type_t& io_type)
+		io_type_t& io_type, end_level_exception *end_level)
 {
 	const int ticks = SDL_GetTicks();
 	const int num_turns = atoi((*level)["turns"].c_str());
 	playmp_controller playcontroller(*level, state_of_game, ticks, num_turns,
 		game_config, disp.video(), skip_replay, io_type == IO_SERVER);
-	const LEVEL_RESULT res = playcontroller.play_scenario(story, log, skip_replay);
-
+	const LEVEL_RESULT res = playcontroller.play_scenario(story, log, skip_replay, end_level);
+	
 	//Check if the player started as mp client and changed to host
 	if (io_type == IO_CLIENT && playcontroller.is_host())
 		io_type = IO_SERVER;
@@ -171,7 +171,7 @@ static LEVEL_RESULT playmp_scenario(const config& game_config,
 	}
 
 	if (!disp.video().faked() && res != QUIT) {
-		if(res == LEVEL_CONTINUE || res == LEVEL_CONTINUE_NO_SAVE) {
+		if(!end_level->linger_mode) {
 			if(!playcontroller.is_host()) {
 				// If we continue without lingering we need to
 				// make sure the host uploads the next scenario
@@ -318,7 +318,8 @@ LEVEL_RESULT play_game(display& disp, game_state& gamestate, const config& game_
 
 		bool save_game_after_scenario = true;
 
-		LEVEL_RESULT res = LEVEL_CONTINUE;
+		LEVEL_RESULT res = VICTORY;
+		end_level_exception *end_level = new end_level_exception(VICTORY);
 
 		try {
 			// Preserve old label eg. replay
@@ -370,11 +371,11 @@ LEVEL_RESULT play_game(display& disp, game_state& gamestate, const config& game_
 
 			switch (io_type){
 			case IO_NONE:
-				res = playsingle_scenario(game_config,scenario,disp,gamestate,story,log, skip_replay);
+				res = playsingle_scenario(game_config,scenario,disp,gamestate,story,log, skip_replay, end_level);
 				break;
 			case IO_SERVER:
 			case IO_CLIENT:
-				res = playmp_scenario(game_config,scenario,disp,gamestate,story,log, skip_replay, io_type);
+				res = playmp_scenario(game_config,scenario,disp,gamestate,story,log, skip_replay, io_type, end_level);
 				break;
 			}
 		} catch(game::load_game_failed& e) {
@@ -436,8 +437,7 @@ LEVEL_RESULT play_game(display& disp, game_state& gamestate, const config& game_
 		gamestate.replay_data.clear();
 
 		// On DEFEAT, QUIT, or OBSERVER_END, we're done now
-		if (res != VICTORY && res != LEVEL_CONTINUE_NO_SAVE
-			&& res != LEVEL_CONTINUE)
+		if (res != VICTORY)
 		{
 			if (res != OBSERVER_END || gamestate.next_scenario.empty())
 				return res;
@@ -451,7 +451,7 @@ LEVEL_RESULT play_game(display& disp, game_state& gamestate, const config& game_
 
 		// Continue without saving is like a victory,
 		// but the save game dialog isn't displayed
-		if(res == LEVEL_CONTINUE_NO_SAVE)
+		if(!end_level->save)
 			save_game_after_scenario = false;
 
 		// Switch to the next scenario.
