@@ -105,6 +105,9 @@ Version 1.5.6+svn:
    * If there is a file called _initial.cfg in an included directory, and
      no _main.cfg, _initial.cfg is guaranteed to be processed before other
      files in the directory.
+   * [endlevel] has been expanded by the carryover_report=, save= and 
+     linger_mode= attribute. result=continue and continue_no_saves are 
+     now deprecated.
  * Miscellaneous and bug fixes:
    * Compressed start-of-scenario saves are properly recognized by the
      load-game dialog again.
